--- a/.github/workflows/ChongshengB_Padavan_CI.yml
+++ b/.github/workflows/ChongshengB_Padavan_CI.yml
@@ -31,6 +31,12 @@ env:
   ENABLED_CFG: |
     CONFIG_FIRMWARE_INCLUDE_LANG_CN
     CONFIG_FIRMWARE_ENABLE_IPV6
+    CONFIG_FIRMWARE_INCLUDE_SMARTDNS
+    CONFIG_FIRMWARE_INCLUDE_SMARTDNSBIN
+    CONFIG_FIRMWARE_INCLUDE_ADGUARDHOME
+    CONFIG_FIRMWARE_INCLUDE_WYY
+    CONFIG_FIRMWARE_INCLUDE_WYYBIN
+    CONFIG_FIRMWARE_INCLUDE_ZEROTIER
   DISABLED_CFG: |
     CONFIG_FIRMWARE_INCLUDE_LANG_UK
     CONFIG_FIRMWARE_INCLUDE_TCPDUMP
@@ -59,15 +65,9 @@ env:
     CONFIG_FIRMWARE_INCLUDE_TROJAN
     CONFIG_FIRMWARE_INCLUDE_ADBYBY
     CONFIG_FIRMWARE_INCLUDE_KOOLPROXY
-    CONFIG_FIRMWARE_INCLUDE_SMARTDNS
-    CONFIG_FIRMWARE_INCLUDE_SMARTDNSBIN
-    CONFIG_FIRMWARE_INCLUDE_ADGUARDHOME
     CONFIG_FIRMWARE_INCLUDE_ALIDDNS
     CONFIG_FIRMWARE_INCLUDE_CADDY
     CONFIG_FIRMWARE_INCLUDE_CADDYBIN
-    CONFIG_FIRMWARE_INCLUDE_WYY
-    CONFIG_FIRMWARE_INCLUDE_WYYBIN
-    CONFIG_FIRMWARE_INCLUDE_ZEROTIER
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -82,15 +82,7 @@ jobs:
       matrix:
         include:
           - build_variant: "mt7620"
-            targets: "PSG1208 PSG1218 NEWIFI-MINI MI-MINI MI-3 OYE-001 5K-W20"
-          - build_variant: "mt7621"
-            targets: "K2P-5.0 DIR-878-5.0 RM2100 R2100"
-          - build_variant: "mt7621-usb-1"
-            targets: "A3004NS MSG1500 WR1200JS E8820V2 NEWIFI3 RT-AC1200GU"
-          - build_variant: "mt7621-usb-2"
-            targets: "JCG-836PRO-5.0 JCG-AC860M-5.0 JCG-Y2-5.0 DIR-882-5.0 MI-R3G B70"
-          - build_variant: "mt7628"
-            targets: "360P2 HC5861B HC5761A HC5661A MI-NANO MZ-R13 MZ-R13P"
+            targets: "NEWIFI-MINI"
     steps:
       - name: Checkout main            # 导入主分支
         uses: actions/checkout@main
